--- a/Water_Features/l10n/ko-KR.json
+++ b/Water_Features/l10n/ko-KR.json
@@ -89,6 +89,8 @@
   "Assets.DESCRIPTION[WaterSource DetentionBasin]": "강수량과 눈이 녹으면 상승하고 날씨가 건조하면 천천히 배수되는 맞춤형 커스텀 수원입니다. 최대 수면 높이는 있지만 최소 수면 높이는 없습니다. 최대 수면 높이를 지정하려면 원하는 고도 지표면을 우클릭하세요. 재생 가능한 영역 내에 배치하려면 좌클릭하세요. 마우스를 올려 놓고 우클릭하면 제거됩니다.",
   "Assets.NAME[WaterSource RetentionBasin]": "저수지",
   "Assets.DESCRIPTION[WaterSource RetentionBasin]": "강수량과 눈이 녹으면 상승하고 날씨가 건조하면 천천히 배수되는 맞춤형 커스텀 수원입니다. 이 수원은 최대 수면 높이와 최소 수면 높이를 가지고 있습니다. 최대 수면 높이를 지정하려면 원하는 고도 지표면을 우클릭하세요. 재생 가능한 영역 내에 배치하려면 좌클릭하세요. 마우스를 올려 놓고 우클릭하면 제거됩니다.",
+  "Assets.NAME[WaterSource Automated]": "Automated Water Source",
+  "Assets.DESCRIPTION[WaterSource Automated]": "Custom modded water source that dynamically changes water source type to automatically fill and stabilize to the desired water surface elevation. Not affected by Seasonal Streams or Waves and Tides settings. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
   "Tooltip.LABEL[YY.WT.PlaceNearBorder]": "강은 지도 경계 근처에 배치되어야 합니다.",
   "Tooltip.LABEL[YY.WT.RadiusTooSmall]": "반경이 너무 작아서 자동으로 증가되었습니다.",
   "Tooltip.LABEL[YY.WT.RemoveWaterSource]": "수원을 제거하려면 우클릭 하십시오.",
@@ -100,10 +102,6 @@
   "Editor.TOOL[Yenyang's Water Tool]": "Yenyang의 물 도구",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "물 도구 설정은 에디터 시뮬레이션에 영향을 줍니다",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "물 도구탭의 설정이 증발, 유동성 및 물 청소 주기와 같은 에디터 시뮬레이션에 영향을 미칠 수 있습니다.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsAffectEditorSimulation]": "계절 하천 설정이 에디터 시뮬레이션에 영향을 미침",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsAffectEditorSimulation]": "계절 하천 탭의 설정이 에디터 시뮬레이션에 영향을 미치고 하천 유량을 변경할 수 있습니다.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesAffectEditorSimulation]": "파도와 조수 설정이 에디터 시뮬레이션에 영향을 미침",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesAffectEditorSimulation]": "파도와 조수 탭의 설정이 해수면을 진동시키고 감쇠 값을 변경하여 에디터 시뮬레이션에 영향을 줄 수 있습니다.",
   "YY_WATER_FEATURES_DESCRIPTION.ElevationChange": "물 도구는 기존 수원 위로 마우스를 가져간 후 마우스 왼쪽 버튼을 누르고 드래그한 후 새 고도에서 놓아 기존 수원의 목표 높이를 변경합니다. 일반적으로 드래그하면 상승하고 드래그하면 낮아지지만 실제로는 원하는 높이에서 놓는 것뿐입니다. 신뢰성을 위해 커서를 재생 가능한 영역 내에 유지하십시오. 취소하려면 마우스 오른쪽 버튼을 클릭하세요.",
   "YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource": "물 도구는 왼쪽 클릭으로 물원을 배치하고, 오른쪽 클릭으로 물원을 제거합니다.",
   "YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource": "물 도구는 기존 수원을 이동합니다. 기존 수원의 목표 고도는 변경되지 않습니다. 취소하려면 마우스 오른쪽 버튼을 클릭하세요.",
@@ -112,6 +110,13 @@
   "YY_WATER_FEATURES.PlaceWaterSource": "수원 배치",
   "YY_WATER_FEATURES.MoveWaterSource": "수원 이동",
   "YY_WATER_FEATURES.RadiusChange": "반경 변경",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version number for the Water Features mod installed."
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "버전",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "설치된 Water Features 모드의 버전 번호입니다.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Seasonal Streams settings available in the Game or Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Waves and Tides settings available in the Game or Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Force Water Simulation Speed",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Attempts to force a Water Simulation Speed of at least 1x while in Game.",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Editor",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Individual Save File",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "General"
 }
