--- a/Water_Features/l10n/de-DE.json
+++ b/Water_Features/l10n/de-DE.json
@@ -89,6 +89,8 @@
   "Assets.DESCRIPTION[WaterSource DetentionBasin]": "Benutzerdefiniert modifizierte Wasserquelle, die bei Niederschlag und Schneeschmelze ansteigt und bei trockenem Wetter langsam abfließt. Sie haben eine maximale Höhe der Wasseroberfläche, aber keine minimale Höhe. Rechtsklick, um die maximale Höhe festzulegen. Linksklick, um sie im spielbaren Bereich zu platzieren. Mit Rechtsklick über der Quelle entfernen.",
   "Assets.NAME[WaterSource RetentionBasin]": "Regenrückhaltebecken",
   "Assets.DESCRIPTION[WaterSource RetentionBasin]": "Benutzerdefiniert modifizierte Wasserquelle, die bei Niederschlag und Schneeschmelze ansteigt und bei trockenem Wetter langsam abfließt. Sie haben eine maximale Höhe der Wasseroberfläche, und eine minimale Höhe. Rechtsklick, um die maximale Höhe festzulegen. Linksklick, um sie im spielbaren Bereich zu platzieren. Mit Rechtsklick über der Quelle entfernen.",
+  "Assets.NAME[WaterSource Automated]": "Automatisierte Wasserquelle",
+  "Assets.DESCRIPTION[WaterSource Automated]": "Custom modded water source that dynamically changes water source type to automatically fill and stabilize to the desired water surface elevation. Not affected by Seasonal Streams or Waves and Tides settings. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
   "Tooltip.LABEL[YY.WT.PlaceNearBorder]": "Flüsse müssen in der Nähe der Kartengrenze platziert werden.",
   "Tooltip.LABEL[YY.WT.RadiusTooSmall]": "Der Radius ist zu klein und wurde automatisch erhöht.",
   "Tooltip.LABEL[YY.WT.RemoveWaterSource]": "Rechtsklick um Wasserquelle zu entfernen.",
@@ -100,10 +102,6 @@
   "Editor.TOOL[Yenyang's Water Tool]": "Yenyang's Wasserwerkzeug",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "Wasserwerkzeugeinstellungen beeinflussen die Editor Simulation",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "Erlaubt es den Wasserwerkzeugeinstellungen die Editor Simulation zu beeinflussen wie Verdampfung, Fluidität, und den Wasserbereinigungszyklus.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsAffectEditorSimulation]": "Saisonale Wasserflusseinstellungen beeinflussen die Editor Simulation",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsAffectEditorSimulation]": "Erlaubt es den Einstellungen der Saisonalen Wasserflüsse die Editor Simulation zu beeinflussen und Wasserflussraten von Flüssen zu ändern.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesAffectEditorSimulation]": "Wellen und Gezeiteneinstellungen beeinflussen die Editor Simulation",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesAffectEditorSimulation]": "Erlaubt es den Wellen und Gezeiteneinstellungen die Editor Simulation zu beeinflussen, indem die Schwingung des Meeresspiegels und der Dämpfungswert beeinflusst wird.",
   "YY_WATER_FEATURES_DESCRIPTION.ElevationChange": "Das Wasserwerkzeug ändert die Zielhöhen bestehender Wasserquellen, indem man Linksklick auf ihnen gedrückt halt und zieht, bis man bei der gewünschten Höhe angekommen ist. Behalte den Cursor innerhalb des spielbaren Bereichs für Zuverlässigkeit. Rechtsklick zum Abbrechen.",
   "YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource": "Das Wasserwerkzeug platziert Wasserquellen mit Linksklick und entfernt Wasserquellen mit Rechtsklick.",
   "YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource": "Das Wasserwerkzeug verschiebt vorhandene Wasserquellen. Die Zielhöhe der vorhandenen Wasserquellen wird sich nicht ändern. Rechtsklick zum Abbrechen.",
@@ -113,5 +111,12 @@
   "YY_WATER_FEATURES.MoveWaterSource": "Wasserquelle verschieben",
   "YY_WATER_FEATURES.RadiusChange": "Radius ändern",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Versionsnummer für die installierte Water Features Mod."
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Versionsnummer für die installierte Water Features Mod.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Seasonal Streams settings available in the Game or Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Wellen und Gezeiteneinstellungen sind im Spiel oder Editor verfügbar.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Wasser-Simulationsgeschwindigkeit erzwingen",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Versuche im Spiel eine Wasser-Simulationsgeschwindigkeit von mindestens 1x zu erzwingen.",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Editor",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Individuelle Speicherdatei",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "Allgemein"
 }
