--- a/Water_Features/l10n/it-IT.json
+++ b/Water_Features/l10n/it-IT.json
@@ -89,6 +89,8 @@
   "Assets.DESCRIPTION[WaterSource DetentionBasin]": "Fonte di acqua personalizzata modded che aumenta con precipitazione e scioglimento della neve e lentamente drena quando il tempo è asciutto. Hanno un'elevazione massima della superficie dell'acqua ma nessuna elevazione minima della superficie dell'acqua. Fare clic con il tasto destro per designare l'elevazione massima. Fare clic con il tasto sinistro per posizionare nell'area giocabile. Passa sopra e fare clic con il tasto destro per rimuovere.",
   "Assets.NAME[WaterSource RetentionBasin]": "Bacino Di Ritenzione",
   "Assets.DESCRIPTION[WaterSource RetentionBasin]": "Fonte di acqua personalizzata modded che aumenta con precipitazione e scioglimento della neve e lentamente drena quando il tempo è asciutto. Hanno un'elevazione massima della superficie dell'acqua ma nessuna elevazione minima della superficie dell'acqua. Fare clic con il tasto destro per designare l'elevazione massima. Fare clic con il tasto sinistro per posizionare nell'area giocabile. Passa sopra e fare clic con il tasto destro per rimuovere.",
+  "Assets.NAME[WaterSource Automated]": "Automated Water Source",
+  "Assets.DESCRIPTION[WaterSource Automated]": "Custom modded water source that dynamically changes water source type to automatically fill and stabilize to the desired water surface elevation. Not affected by Seasonal Streams or Waves and Tides settings. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
   "Tooltip.LABEL[YY.WT.PlaceNearBorder]": "I fiumi devono essere posizionati vicino al confine con la cartina.",
   "Tooltip.LABEL[YY.WT.RadiusTooSmall]": "Il raggio è troppo piccolo ed è aumentato automaticamente.",
   "Tooltip.LABEL[YY.WT.RemoveWaterSource]": "Fare clic con il tasto destro per rimuovere la fonte d'acqua.",
@@ -100,10 +102,6 @@
   "Editor.TOOL[Yenyang's Water Tool]": "Strumento Acqua Di Yenyang",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "Le Impostazioni Degli Strumenti Dell'Acqua influenzano La Simulazione Dell'Editor",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "Consente alle impostazioni nella scheda Strumento Acqua di influenzare la simulazione dell'editor come evaporazione, fluidità e Pulizia Acqua Ciclo.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsAffectEditorSimulation]": "Le Impostazioni Degli Strumenti Dell'Acqua influenzano La Simulazione Dell'Editor",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsAffectEditorSimulation]": "Consente alle impostazioni nella scheda Flussi stagionali di influenzare la simulazione dell'editor e modificare le portate del flusso.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesAffectEditorSimulation]": "Le Impostazioni di onde e maree influenzano La Simulazione Dell'Editor",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesAffectEditorSimulation]": "Consente alle impostazioni nella scheda Onde e maree di influenzare la simulazione dell'editor oscillando il livello del mare e alterando il valore di smorzamento.",
   "YY_WATER_FEATURES_DESCRIPTION.ElevationChange": "Lo strumento per l'acqua cambierà gli aumenti bersaglio delle fonti idriche esistenti passando sopra la fonte di acqua esistente, facendo clic con il tasto sinistro, tenendo, trascinando e rilasciando a nuova elevazione. Di solito trascinando gli alzi, e trascinando in basso, ma è davvero solo rilasciando all'elevazione desiderata. Mantieni il cursore all'interno dell'area giocabile per l'affidabilità. Fai clic con il tasto destro per annullare.",
   "YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource": "Lo strumento dell'acqua posizionerà le fonti d'acqua con il clic sinistro e rimuoverà le fonti d'acqua con il clic destro.",
   "YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource": "Lo strumento acqua sposterà le fonti idriche esistenti. Gli aumenti di destinazione delle fonti idriche esistenti non cambieranno. Click destro per annullare.",
@@ -113,5 +111,12 @@
   "YY_WATER_FEATURES.MoveWaterSource": "Sposta Sorgente Acqua",
   "YY_WATER_FEATURES.RadiusChange": "Cambia il Raggio",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version number for the Water Features mod installed."
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version number for the Water Features mod installed.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Seasonal Streams settings available in the Game or Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Waves and Tides settings available in the Game or Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Force Water Simulation Speed",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Attempts to force a Water Simulation Speed of at least 1x while in Game.",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Editor",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Individual Save File",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "General"
 }
