--- a/Water_Features/l10n/zh-HANT.json
+++ b/Water_Features/l10n/zh-HANT.json
@@ -89,6 +89,8 @@
   "Assets.DESCRIPTION[WaterSource DetentionBasin]": "自訂模組水源，隨降水和融雪上升，天氣乾燥時慢慢排水。它們有最大水面高度，但沒有最小水面高度。右鍵點擊指定最大海拔。左鍵點擊放置在可玩區域內。懸停並右鍵點擊以移除。",
   "Assets.NAME[WaterSource RetentionBasin]": "滯留盆地",
   "Assets.DESCRIPTION[WaterSource RetentionBasin]": "自訂模組水源，隨降水和融雪上升，天氣乾燥時慢慢排水。它們有最大水面高度和最小水面高度。右鍵點擊指定最大海拔。左鍵點擊放置在可玩區域內。懸停並右鍵點擊以移除。",
+  "Assets.NAME[WaterSource Automated]": "Automated Water Source",
+  "Assets.DESCRIPTION[WaterSource Automated]": "Custom modded water source that dynamically changes water source type to automatically fill and stabilize to the desired water surface elevation. Not affected by Seasonal Streams or Waves and Tides settings. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
   "Tooltip.LABEL[YY.WT.PlaceNearBorder]": "河流必須放置在地圖邊界附近。",
   "Tooltip.LABEL[YY.WT.RadiusTooSmall]": "半徑太小，已自動增加。",
   "Tooltip.LABEL[YY.WT.RemoveWaterSource]": "滑鼠右鍵刪除水資源",
@@ -100,10 +102,6 @@
   "Editor.TOOL[Yenyang's Water Tool]": "Yenyang的水工具",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "水工具設置影響編輯器模擬",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "允許水工具選項卡中的設置影響編輯器模擬，如蒸發、流體性和水清理循環。",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsAffectEditorSimulation]": "季節性溪流設置影響編輯器模擬",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsAffectEditorSimulation]": "允許季節性溪流選項卡中的設置影響編輯器模擬並改變溪流流速。",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesAffectEditorSimulation]": "波浪和潮汐設置影響編輯器模擬",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesAffectEditorSimulation]": "允許波浪和潮汐選項卡中的設置通過振盪海平面和改變阻尼值來影響編輯器模擬。",
   "YY_WATER_FEATURES_DESCRIPTION.ElevationChange": "水工具將通過懸停在現有水源上、左鍵點擊、按住、拖動並在新海拔處釋放來改變現有水源的目標海拔。通常拖出來會升高，拖進去會降低，但實際上只是釋放在所需的海拔。為了可靠性，將游標保持在可玩區域內。右鍵點擊取消。",
   "YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource": "水工具將使用左鍵點擊放置水源，使用右鍵點擊移除水源。",
   "YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource": "水工具將移動現有的水源。現有水源的目標海拔不會改變。右鍵點擊取消。",
@@ -113,5 +111,12 @@
   "YY_WATER_FEATURES.MoveWaterSource": "移動水源",
   "YY_WATER_FEATURES.RadiusChange": "改變半徑",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version number for the Water Features mod installed."
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version number for the Water Features mod installed.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Seasonal Streams settings available in the Game or Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Waves and Tides settings available in the Game or Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Force Water Simulation Speed",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Attempts to force a Water Simulation Speed of at least 1x while in Game.",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Editor",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Individual Save File",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "General"
 }
