--- a/Water_Features/l10n/de-DE.json
+++ b/Water_Features/l10n/de-DE.json
@@ -90,7 +90,7 @@
   "Assets.NAME[WaterSource RetentionBasin]": "Regenrückhaltebecken",
   "Assets.DESCRIPTION[WaterSource RetentionBasin]": "Benutzerdefiniert modifizierte Wasserquelle, die bei Niederschlag und Schneeschmelze ansteigt und bei trockenem Wetter langsam abfließt. Sie haben eine maximale Höhe der Wasseroberfläche, und eine minimale Höhe. Rechtsklick, um die maximale Höhe festzulegen. Linksklick, um sie im spielbaren Bereich zu platzieren. Mit Rechtsklick über der Quelle entfernen.",
   "Assets.NAME[WaterSource Automated]": "Automatisierte Wasserquelle",
-  "Assets.DESCRIPTION[WaterSource Automated]": "Custom modded water source that dynamically changes water source type to automatically fill and stabilize to the desired water surface elevation. Not affected by Seasonal Streams or Waves and Tides settings. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
+  "Assets.DESCRIPTION[WaterSource Automated]": "Eigen modifizierbare Wasserquelle, welche sich dynamisch verändert, um die gewünschte Wasseroberflächenhöhe automatisch zu erreichen und zu stabilisieren. Nicht von saisonalen Wasserströmen oder Wellen und Gezeiteneinstellungen beeinflusst. Rechtsklick um die maximale Höhe zu bestimmen. Linksklick um innerhalb des spielbaren Bereichs zu platzieren. Drüber hoveren und Rechtsklick zum Entfernen.",
   "Tooltip.LABEL[YY.WT.PlaceNearBorder]": "Flüsse müssen in der Nähe der Kartengrenze platziert werden.",
   "Tooltip.LABEL[YY.WT.RadiusTooSmall]": "Der Radius ist zu klein und wurde automatisch erhöht.",
   "Tooltip.LABEL[YY.WT.RemoveWaterSource]": "Rechtsklick um Wasserquelle zu entfernen.",
@@ -112,7 +112,7 @@
   "YY_WATER_FEATURES.RadiusChange": "Radius ändern",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Versionsnummer für die installierte Water Features Mod.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Seasonal Streams settings available in the Game or Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Saisonale Wassserflüsse-Einstellungen im Spiel oder Editor verfügbar.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Wellen und Gezeiteneinstellungen sind im Spiel oder Editor verfügbar.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Wasser-Simulationsgeschwindigkeit erzwingen",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Versuche im Spiel eine Wasser-Simulationsgeschwindigkeit von mindestens 1x zu erzwingen.",
