--- a/Water_Features/lang/pt-PT.json
+++ b/Water_Features/lang/pt-PT.json
@@ -89,8 +89,8 @@
   "Assets.DESCRIPTION[WaterSource DetentionBasin]": "Fonte de água personalizada que sobe com a precipitação e o derretimento da neve e drena lentamente quando o clima está seco. Têm uma elevação máxima da superfície da água, mas sem elevação mínima. Clica com o botão direito para designar a elevação máxima. Clica com o botão esquerdo para colocar dentro da área jogável. Passa o cursor sobre e clica com o botão direito para remover.",
   "Assets.NAME[WaterSource RetentionBasin]": "Bacia de retenção",
   "Assets.DESCRIPTION[WaterSource RetentionBasin]": "Fonte de água personalizada que sobe com a precipitação e o derretimento da neve e drena lentamente quando o clima está seco. Têm uma elevação máxima da superfície da água e uma elevação mínima. Clica com o botão direito para designar a elevação máxima. Clica com o botão esquerdo para colocar dentro da área jogável. Passa o cursor sobre e clica com o botão direito para remover.",
-  "Assets.NAME[WaterSource Automated]": "Automated Water Source",
-  "Assets.DESCRIPTION[WaterSource Automated]": "Custom modded water source that dynamically changes water source type to automatically fill and stabilize to the desired water surface elevation. Not affected by Seasonal Streams or Waves and Tides settings. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
+  "Assets.NAME[WaterSource Automated]": "Fonte de água automatizada",
+  "Assets.DESCRIPTION[WaterSource Automated]": "Fonte de água customizada que altera dinamicamente o tipo de fonte de água para preencher e estabilizar automaticamente a elevação de água desejada. Não afetado pelos fluxos sazonais ou ondas e margens. Clique com o botão direito para designar a elevação máxima. Clique com o botão esquerdo para colocar dentro da área jogável. Passe o mouse sobre e com o botão direito para remover.",
   "Tooltip.LABEL[YY.WT.PlaceNearBorder]": "Os rios devem ser colocados perto da fronteira do mapa.",
   "Tooltip.LABEL[YY.WT.RadiusTooSmall]": "O raio é demasiado pequeno e foi aumentado automaticamente.",
   "Tooltip.LABEL[YY.WT.RemoveWaterSource]": "Clica com o botão direito para remover a fonte de água.",
@@ -112,11 +112,11 @@
   "YY_WATER_FEATURES.RadiusChange": "Mudar raio",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Versão",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Número da versão do mod Water Features instalada.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Seasonal Streams settings available in the Game or Editor.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Waves and Tides settings available in the Game or Editor.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Force Water Simulation Speed",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Attempts to force a Water Simulation Speed of at least 1x while in Game.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Configurações de Fontes de Água Sazonais disponíveis no Jogo ou Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "As configurações de Ondas e Marés estão disponíveis no Jogo ou Editor.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Forçar velocidade de simulação da água",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Tenta forçar uma simulação de água de pelo menos 1x enquanto estiver no jogo.",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Editor",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Individual Save File",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "General"
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Salvar Arquivo Individual",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "Geral"
 }
