WaterCausesDamaged being toggled off: Prevents Flooding from accruing by disabling submerge system Removes Flooded and Damaged Components Removes WaterDamage icons buffers Deletes Water Damage icon entities
Incremented version
changelog, and properities

change english localization for water causes damage

improved handling of water system values settings default values.

--- a/Water_Features/UI/src/lang/en-US.json
+++ b/Water_Features/UI/src/lang/en-US.json
@@ -56,6 +56,8 @@
   "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]": "Reset Waves and Tides Settings?",
   "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Diurnal]": "Diurnal",
   "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Semidiurnal]": "Semidiurnal",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCausesDamage]": "Water Causes Damage",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCausesDamage]": "Enables or disables the Vanilla Water Damage System. This is saved per save game. When toggled off, removes all flooding from buildings that are not yet destroyed.",
   "YY_WATER_FEATURES.Flow": "Flow",
   "YY_WATER_FEATURES.Depth": "Depth",
   "YY_WATER_FEATURES.MaxDepth": "Max Depth",
